# Skating_jmp_angular_momentum

./: .gitignore  README.md  pyproject.toml  skating_aerial_alignment_gui.py  skating_aerial_alignment_vtk.py
artifacts/lab/: README.md  scenarios.json
src/skating_aerial_alignment/: __init__.py  __main__.py  anthropometry.py  cli.py
src/skating_aerial_alignment/modeling/: __init__.py  biomod.py
src/skating_aerial_alignment/simulation/: __init__.py  flight.py
src/skating_aerial_alignment/visualization/: __init__.py  app.py  vtk_viewer.py
tests/: test_biomod.py  test_cli.py  test_gui_smoke.py  test_package_smoke.py  test_simulation.py  test_visualization.py  test_vtk_viewer.py
