[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "skating-aerial-alignment"
version = "0.1.0"
description = "Aerial-phase skating jump simulations driven by biorbd."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "mickaelbegon" },
]
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
]
animation3d = [
    "vtk>=9.3",
]

[project.scripts]
skating-aerial-alignment = "skating_aerial_alignment.__main__:main"
skating-aerial-alignment-vtk = "skating_aerial_alignment.visualization.vtk_viewer:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
